<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/img_back"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_back"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="-40dp"
        android:textColor="#383838"
        android:fontFamily="@font/bold"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingTop="10dp"
        style="@style/style_editext"
        android:layout_marginTop="50dp"
        android:id="@+id/edt_contact_us"
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textColor="#383838"
        android:fontFamily="@font/regular"
        android:hint="@string/enter_your_message_here"
        android:gravity="start"
        android:inputType="textMultiLine"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_send"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/send_message"
        android:textAllCaps="false"
        android:background="@drawable/bg_gradient_green"
        android:fontFamily="@font/bold"
        android:textColor="#ffffff"
        android:textSize="18sp"/>

</LinearLayout>
