<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cristalbusinessservices.FileMyTaxes"
    android:background="@color/color_bg">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/img_back"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_back"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LIenar Mis Impuestos"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:textColor="#383838"
            android:fontFamily="@font/bold"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/bg_filemytax"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seleccionar año"
            android:textSize="14sp"
            android:layout_marginTop="60dp"
            android:textColor="#9c9c9c"
            android:fontFamily="@font/regular"/>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center|left"
                android:id="@+id/tv_year"
                android:textColor="#383838"
                android:fontFamily="@font/bold"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/style_editext2"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_down"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
            android:visibility="gone"
            android:layout_marginTop="-5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9c9c9c"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_tax_type"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:textColor="#9c9c9c"
            android:fontFamily="@font/regular"/>

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center|left"
                android:id="@+id/tv_type"
                android:textColor="#383838"
                android:fontFamily="@font/bold"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/style_editext2"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_down"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <View
            android:visibility="gone"
            android:layout_marginTop="-5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9c9c9c"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_can_upload_required_tax_documents"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="#9c9c9c"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_save"
        android:layout_above="@+id/bt_cancel"
        android:background="@drawable/bg_gradient_green"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/save_amp_continue"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:fontFamily="@font/bold"
        android:textAllCaps="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/boder_button_home"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#383838"
        android:textSize="16sp" />

</RelativeLayout>